# SyntheticDataGen_project

./: .gitignore  LICENSE  README.md  generate_sample.py  requirements.txt  setup.cfg
.github/workflows/: ci.yml
schemas/: example.yaml
syntheticgen/: __init__.py  cli.py  generator.py
tests/: test_generator.py
