[metadata]
name = syntheticgen
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A synthetic data generation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/syntheticgen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    numpy
    pyyaml
    faker

[options.extras_require]
dev =
    pytest
